--- a/Case_Study_3_Kelompok_6.ipynb
+++ b/Case_Study_3_Kelompok_6.ipynb
@@ -24,25 +24,10 @@
       "source": [
         "**Market Basket Analysis Toko AlfaIndo Cabang UIN Ciputat**\n",
         "\n",
-        "AlfaIndo adalah sebuah toko waralaba yang memiliki beberapa cabang di kota-kota besar di Indonesia seperti Jakarta, Depok, Tangerang, Surabaya, dan Medan.\n",
-        "\n",
-        "Anda adalah seorang Data Analyst yang bekerja di kantor pusat AlfaIndo di Jakarta\n",
-        "\n",
-        "Pasca masa pandemi Toko AlfaIndo cabang UIN Ciputat mengalami penurunan laba yang signifikan.\n",
-        "\n",
-        "Anda ditugaskan oleh pimpinan untuk membantu toko ALfaIndo cabang UIN Ciputat untuk bangkit dari keterpurukannya."
+        "AlfaIndo adalah sebuah toko waralaba yang memiliki beberapa cabang di kota-kota besar di Indonesia seperti Jakarta, Depok, Tangerang, Surabaya, dan Medan. Pasca masa pandemi Toko AlfaIndo cabang UIN Ciputat mengalami penurunan laba yang signifikan. Oleh karena itu, kami akan memberikan saran dan strategi untuk ALfaIndo cabang UIN Ciputat untuk dapat meningkatkan poenjualan dan bangkit dari keterpurukannya."
       ],
       "metadata": {
         "id": "FNNlWGmTPs-B"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Mengacu pada hipotesis awal jika barang yang sering dibeli oleh orang, Apakah orang lain juga akan membeli barang lain yang sama juga yang sering dibeli oleh orang tersebut ?"
-      ],
-      "metadata": {
-        "id": "6RYVT8WFMp8y"
       }
     },
     {
